@@ -2,7 +2,7 @@ Source: dh-make
 Section: devel
 Priority: optional
 Maintainer: Craig Small <csmall@debian.org>
-Build-Depends: debhelper  (>= 6)
+Build-Depends: debhelper  (>= 7)
 Standards-Version: 3.7.3
 
 Package: dh-make
