@@ -49,7 +49,7 @@ CDBS provides a sane set of default rules upon which packages can build.
 .SH ACTIONS PERFORMED
 Unless \-\-native was given, 
 .B dh_make
-makes sure a original source archive (<packagename>\-<version>.orig.tar.gz)
+makes sure a original source archive (<packagename>_<version>.orig.tar.gz)
 exists.
 If no such file exists, the file specified with \-f is copied in place.
 If no \-f is supplied either but \-\-createorig is, the current directory
