@@ -31,7 +31,7 @@ and
 commands.
 .PP
 .\" TeX users may be more comfortable with the \fB<whatever>\fP and
-.\" \fI<whatever>\fP escape sequences to invode bold face and italics, 
+.\" \fI<whatever>\fP escape sequences to invode bold face and italics,
 .\" respectively.
 \fB#PACKAGE#\fP is a program that...
 .SH OPTIONS
