@@ -19,4 +19,4 @@ Format: HTML
 Index: /usr/share/doc/#PACKAGE#/html/index.html
 Files: /usr/share/doc/#PACKAGE#/html/*.html
 
-  
+
