@@ -2,7 +2,7 @@ Source: #PACKAGE#
 Section: unknown
 Priority: optional
 Maintainer: #USERNAME# <#EMAIL#>
-Build-Depends: debhelper (>= 5)
+Build-Depends: debhelper (>= 7)
 Standards-Version: #POLICY#
 
 Package: #PACKAGE#-modules-_KVERS_
