@@ -3,12 +3,12 @@ This package was debianized by #USERNAME# <#EMAIL#> on
 
 It was downloaded from <url://example.com>
 
-Upstream Author(s): 
+Upstream Author(s):
 
     <put author's name and email here>
     <likewise for another author>
 
-Copyright: 
+Copyright:
 
     <Copyright (C) YYYY Name OfAuthor>
     <likewise for another author>
@@ -30,7 +30,7 @@ License:
     OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
     SUCH DAMAGE.
 
-On Debian systems, the complete text of the BSD License can be 
+On Debian systems, the complete text of the BSD License can be
 found in `/usr/share/common-licenses/BSD'.
 
 
