@@ -3,12 +3,12 @@ This package was debianized by #USERNAME# <#EMAIL#> on
 
 It was downloaded from <url://example.com>
 
-Upstream Author(s): 
+Upstream Author(s):
 
     <put author's name and email here>
     <likewise for another author>
 
-Copyright: 
+Copyright:
 
     <Copyright (C) YYYY Name OfAuthor>
     <likewise for another author>
@@ -19,12 +19,12 @@ License:
     it under the terms of the GNU General Public License as published by
     the Free Software Foundation; either version 2 of the License, or
     (at your option) any later version.
- 
+
     This package is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     GNU General Public License for more details.
- 
+
     You should have received a copy of the GNU General Public License
     along with this package; if not, write to the Free Software
     Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301 USA
