@@ -3,12 +3,12 @@ This package was debianized by #USERNAME# <#EMAIL#> on
 
 It was downloaded from <url://example.com>
 
-Upstream Author(s): 
+Upstream Author(s):
 
     <put author's name and email here>
     <likewise for another author>
 
-Copyright: 
+Copyright:
 
     <Copyright (C) YYYY Name OfAuthor>
     <likewise for another author>
